log
Wed 03 May 2023 02:26:03 PM UTC: 
 tests:  0|5
total_score: 0/70
7d932af
Wed 03 May 2023 03:00:47 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: unused variable ‘numero’ [-Werror=unused-variable]
   54 |     int numero = 1;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ae89136
Wed 03 May 2023 03:00:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
87195a9
Wed 03 May 2023 03:09:23 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9f6e084
